; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gdtoa/extr_machdep_ldisx.c_strtold_l.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gdtoa/extr_machdep_ldisx.c_strtold_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLT_ROUNDS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local x86_fp80 @strtold_l(i8* noalias %0, i8** noalias %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca x86_fp80, align 16
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @FIX_LOCALE(i32 %8)
  %10 = load i8*, i8** %4, align 8
  %11 = load i8**, i8*** %5, align 8
  %12 = load i32, i32* @FLT_ROUNDS, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @strtorx_l(i8* %10, i8** %11, i32 %12, x86_fp80* %7, i32 %13)
  %15 = load x86_fp80, x86_fp80* %7, align 16
  ret x86_fp80 %15
}

declare dso_local i32 @FIX_LOCALE(i32) #1

declare dso_local i32 @strtorx_l(i8*, i8**, i32, x86_fp80*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
